cnm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnm-deployment
  labels:
    app: cnm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cnm
  template:
    metadata:
      labels:
        app: cnm
    spec:
      containers:
      - name: cnm
        image: index.docker.io/prakashshettigar23/networkapp:latest
        ports:
        - containerPort: 80
