run-cnm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnm
spec:
  selector:
    matchLabels:
      run: cnm
  replicas: 2
  template:
    metadata:
      labels:
        run: cnm
    spec:
      containers:
      - name: cnm
        image: index.docker.io/prakashshettigar23/networkapp:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
