cnm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cnm
  labels:
    run: cnm
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 31234
    protocol: TCP
  selector:
    run: cnm
